--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/date-fns": "^2.6.0",
     "core-js": "^2.4.1",
+    "date-fns": "^1.29.0",
     "material-ui": "^0.20.0",
+    "node-sass": "^4.9.0",
     "rxjs": "^5.5.6",
+    "sass-loader": "^7.0.1",
+    "scss-loader": "^0.0.1",
+    "style-loader": "^0.21.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
