--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^2.0.4",
+    "@ngrx/router-store": "^1.2.6",
+    "@ngrx/store": "^2.2.3",
+    "@ngrx/store-devtools": "^3.2.4",
     "@types/date-fns": "^2.6.0",
     "core-js": "^2.4.1",
     "date-fns": "^1.29.0",
     "material-ui": "^0.20.0",
+    "ngrx-store-freeze": "^0.2.3",
     "node-sass": "^4.9.0",
     "rxjs": "^5.5.6",
     "sass-loader": "^7.0.1",
